# dns-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  config.toml.example  docker-compose.yml  test_summary.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  rewrite.rs  server.rs  sni.rs  tls_utils.rs  utils.rs
src/proxy/: http.rs
src/quic/: client.rs  config.rs  mod.rs
src/readers/: README.md  doh.rs  doh3.rs  doq.rs  dot.rs  healthcheck.rs  mod.rs
src/rewriters/: README.md  base.rs  mod.rs
src/upstream/: http.rs  mod.rs  pool.rs  quic.rs
src/utils/: backoff.rs
tests/: app.rs  config.rs  error.rs  error_scenarios.rs  integration.rs  metrics.rs  performance.rs  pool.rs  proxy.rs  quic.rs  readers.rs  rewrite.rs  rewriters_base.rs  rewriters_edge_cases.rs  tls_utils.rs  upstream.rs  utils.rs
