[package]
name = "dns-proxy"
version = "1.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
rustls-native-certs = "0.6"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dashmap = "6.0"
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json","rustls-tls"] }
tokio-test = "0.4"

[profile.release]
opt-level = "z"        
lto = "fat"             
codegen-units = 1
panic = "abort"
strip = "symbols"       
debug = 0
incremental = false