[package]
name = "dns-proxy"
version = "1.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "1.0"
rustls-native-certs = "0.8"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2", "native-tokio"] }
http-body-util = "0.1"
bytes = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"
prometheus = "0.14"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3            
lto = "fat"            
codegen-units = 1       
panic = "abort"      
strip = "symbols"       
debug = 0              
incremental = false  

[profile.release.package."*"]
opt-level = 3             